; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_mips_integer_to_address.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_mips-tdep.c_mips_integer_to_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.type = type { i32 }

@builtin_type_void_data_ptr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.type*, i8*)* @mips_integer_to_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mips_integer_to_address(%struct.type* %0, i8* %1) #0 {
  %3 = alloca %struct.type*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.type* %0, %struct.type** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @builtin_type_void_data_ptr, align 4
  %8 = call i32 @TYPE_LENGTH(i32 %7)
  %9 = call i8* @alloca(i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = load %struct.type*, %struct.type** %3, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @unpack_long(%struct.type* %10, i8* %11)
  store i32 %12, i32* %6, align 4
  %13 = load i8*, i8** %5, align 8
  %14 = load i32, i32* @builtin_type_void_data_ptr, align 4
  %15 = call i32 @TYPE_LENGTH(i32 %14)
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @store_signed_integer(i8* %13, i32 %15, i32 %16)
  %18 = load i8*, i8** %5, align 8
  %19 = load i32, i32* @builtin_type_void_data_ptr, align 4
  %20 = call i32 @TYPE_LENGTH(i32 %19)
  %21 = call i32 @extract_signed_integer(i8* %18, i32 %20)
  ret i32 %21
}

declare dso_local i8* @alloca(i32) #1

declare dso_local i32 @TYPE_LENGTH(i32) #1

declare dso_local i32 @unpack_long(%struct.type*, i8*) #1

declare dso_local i32 @store_signed_integer(i8*, i32, i32) #1

declare dso_local i32 @extract_signed_integer(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
